--- a/content/404.md
+++ b/content/404.md
@@ -1,19 +1,9 @@
 ---
-layout: layouts/home.njk
+layout: layouts/page.njk
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
-Go <a href="/">home</a>.
-
-<!--
-
-Read more: https://www.11ty.dev/docs/quicktips/not-found/
-
-This will work for both GitHub pages and Netlify:
-
-* https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
-* https://www.netlify.com/docs/redirects/#custom-404
-
--->
+Sorry, whatever you were looking for isn't here.
+Wanna go back to the <a href="/">home</a> page?
