--- a/content/blog/2011-08-04-mr-bland.md
+++ b/content/blog/2011-08-04-mr-bland.md
@@ -2,9 +2,9 @@
 title: "Mr. Bland"
 date: "2011-08-04"
 categories:
-  - "portfolio-illustration"
-  - "portfolio-unfinished"
-coverImage: "mr.-bland-sketch.jpg"
+  - "portfolio"
+  - "illustration"
+coverImage: "https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/2011/08/mr.-bland-sketch.jpg"
 ---
 
 Awhile back, I had an idea for a comic strip, which turned into an animation, which turned into too big of a project as I went crazy on it as I wrote scripts, turned the characters into 3D models, etc.
