--- a/content/blog/2011-08-05-ncdevcon.md
+++ b/content/blog/2011-08-05-ncdevcon.md
@@ -2,10 +2,11 @@
 title: "NCDevCon"
 date: "2011-08-05"
 categories:
-  - "portfolio-design"
-  - "portfolio-illustration"
-  - "portfolio-logo"
-  - "portfolio-marketing"
+  - "portfolio"
+  - "design"
+  - "illustration"
+  - "logo"
+  - "marketing"
 ---
 
  
