--- a/content/blog/2011-08-04-tri-me.md
+++ b/content/blog/2011-08-04-tri-me.md
@@ -2,11 +2,12 @@
 title: "Tri-Me"
 date: "2011-08-04"
 categories:
-  - "portfolio-design"
-  - "portfolio-illustration"
-  - "portfolio-logo"
-  - "portfolio-web"
-coverImage: "trime.jpg"
+  - "portfolio"
+  - "design"
+  - "illustration"
+  - "logo"
+  - "web"
+coverImage: "https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/2011/08/trime.jpg"
 ---
 
 Back when I ran the Raleigh Durham Adobe User Group, I was a one man show.  I thought it would be a great idea to join forces with Adrian Pomilio who ran the local Flex User Group.  We came up with the name "Tri-Me" for Triangle Media Experience.
