--- a/content/blog/2011-08-05-lubehelp.md
+++ b/content/blog/2011-08-05-lubehelp.md
@@ -2,14 +2,17 @@
 title: "LubeHelp"
 date: "2011-08-05"
 categories:
-  - "portfolio-illustration"
-  - "portfolio-logo"
-  - "portfolio-web"
-coverImage: "LubeHelp.jpg"
+  - "portfolio"
+  - "illustration"
+  - "logo"
+  - "web"
+coverImage: "https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/2011/08/LubeHelp.jpg"
 ---
 
 So, my brother in law needed a website.  He sells Amsoil and wanted to sell it through his website as an affiliate.
 
-I helped him get a site off the ground and designed.  I did his logo as well
+I helped him get a site off the ground and designed.  I did his logo as well. To be honest, this was my first experience telling
+someone "yes" whenever they wanted something. For design sensibilities, it wasn't a great idea - but being free, I didn't want to
+plan and handhold as I would a professional client.
 
 ![LubeHelp](https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/2011/08/LubeHelp.jpg)
