--- a/content/blog/2011-08-05-three-dee.md
+++ b/content/blog/2011-08-05-three-dee.md
@@ -2,10 +2,11 @@
 title: "Three Dee!"
 date: "2011-08-05"
 categories:
-  - "portfolio-animation"
-  - "portfolio-design"
-  - "portfolio-illustration"
-  - "portfolio-poster"
+  - "portfolio"
+  - "animation"
+  - "art"
+  - "3D"
+  - "poster"
 coverImage: "Chemistry-Set-3D-Scene.jpg"
 ---
 
