--- a/content/blog/2005-07-06-kid-care.md
+++ b/content/blog/2005-07-06-kid-care.md
@@ -1,6 +1,6 @@
 ---
 title: "Kid Care"
-date: "2009-12-26"
+date: "2005-07-06"
 categories:
   - "portfolio"
   - "desktop"
@@ -13,5 +13,8 @@ There were many walkthroughs and interactive tutorials, a journal they could wri
 
 The project was done with Flash and divided into many modules as the user explored and went through missions.
 
-![divorce](https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/2011/12/divorce.jpg)
+![divorce](https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/portfolio/divorce-small.png)
 *Mission Control with Hank the Superdude*
+
+![divorce](https://d2ypg8o05lff0b.cloudfront.net/wp-content/uploads/portfolio/Inflexxion+-+Divorce.jpg)
+*Intro animation*
